<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen"
    android:background="@color/black"

    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:src="@drawable/kino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/ws"
        android:textColor="@color/red"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="201dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/edittext"
        android:hint="@string/name"
        android:padding="7dp"
        android:textColor="@color/text"
        android:textColorHint="@color/gray"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"

        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="201dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/edittext"
        android:padding="7dp"
        android:hint="@string/fam"
        android:textColorHint="@color/text"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="198dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="104dp"
        android:background="@drawable/edittext"
        android:padding="7dp"
        android:hint="@string/mail"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="201dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="100dp"
        android:textColor="@color/text"
        android:background="@drawable/edittext"
        android:padding="7dp"
        android:hint="@string/pass"
        android:textColorHint="@color/text"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="196dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="108dp"
        android:background="@drawable/edittext"
        android:padding="7dp"
        android:hint="@string/repass"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue1"
        android:hint="@string/reg"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <Button
        android:id="@+id/butt1"
        android:layout_width="192dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        android:text="@string/antireg"
        android:textSize="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />



</androidx.constraintlayout.widget.ConstraintLayout>